--- a/index.html
+++ b/index.html
@@ -15,40 +15,43 @@
             <img class="logo" src="img/Logo.png" alt="Logo Toboolist">
             <h1>Toboolist</h1>
         </header>
-
+        <!-- Task Bar -->   
+        <div class="nav-task">
+            <button class="button" id="add-task">Add Task</button>
+            <button class="button" id="add-section">Add a Section</button>
+        </div>
         <!-- Corpo pagina -->
         <main>
-            <!-- Task Bar -->
-
-            <div class="nav-task">
-                <button class="button" id="add-task">Add Task</button>
-                <button class="button" id="add-section">Add a Section</button>
-            </div>
-
-                <!-- Task -->
+            <!-- Task -->
             <div class="task">
-                <div>
+                <!-- Sezione 1 -->
+                <div class="section">
                     <h3>New Task</h3>
-                    <p>Quarterly Newsletter <span class="type editorial">Editorial</span></p>     
+                    <ul>
+                        <li>Quarterly Newsletter<span class="type editorial">Editorial</span></li>
+                    </ul>
                 </div>
-
-                <div>
+                <!-- Sezione 2 -->
+                <div class="section">
                     <h3>Today</h3>
-                    <p>Recruiting blog post <span class="type editorial">Editorial</span></p>
-                    <p>Mobile app launch <span class="type q1">Q1 Goals</span></p>
-                    <p class="cross">Interview John H. <span class="type recruiting">Recruiting</span></p>
-                    <p>Summit update to mobile storefronts <span class="type mobile">Mobile</span></p>
+                    <ul>
+                        <li>Recruiting blog post<span class="type editorial">Editorial</span></li>
+                        <li>Mobile app launch<span class="type q1">Q1 Goals</span></li>
+                        <li class="cross">Interview John H.<span class="type recruiting">Recruiting</span></li>
+                        <li>Summit update to mobile storefronts<span class="type mobile">Mobile</span></li>
+                    </ul>
                 </div>
-
-                <div>
+                <!-- Sezione 3 -->
+                <div class="section">
                     <h3>Upcoming</h3>
-                    <p class="cross">Quarterly Newsletter</p>         
-                    <p>Quarterly Newsletter <span class="type website">Website</span></p>         
-                    <p>Quarterly Newsletter <span class="type sales">Sales</span></p>         
-                    <p>Quarterly Newsletter <span class="type editorial">Editorial</span></p>     
+                    <ul>
+                        <li class="cross">Schedule meeting with Alex</li>
+                        <li>Homepage refresh<span class="type website">Website</span></li>
+                        <li>Onboard new Sales team members<span class="type sales">Sales</span></li>
+                        <li>Review editorial calendar<span class="type editorial">Editorial</span></li>
+                    </ul>
                 </div>
             </div>
-
         </main>
     </body>
 </html>
