--- a/index.html
+++ b/index.html
@@ -28,27 +28,33 @@
                 <div class="section">
                     <h3>New Task</h3>
                     <ul>
-                        <li>Quarterly Newsletter<span class="type editorial">Editorial</span></li>
+                        <div class="round"><span class="plholder"></span></div><li>Quarterly Newsletter<span class="type editorial">Editorial</span></li>
                     </ul>
                 </div>
                 <!-- Sezione 2 -->
                 <div class="section">
                     <h3>Today</h3>
                     <ul>
-                        <li>Recruiting blog post<span class="type editorial">Editorial</span></li>
-                        <li>Mobile app launch<span class="type q1">Q1 Goals</span></li>
-                        <li class="cross">Interview John H.<span class="type recruiting">Recruiting</span></li>
-                        <li>Summit update to mobile storefronts<span class="type mobile">Mobile</span></li>
+                        <div class="round"><span class="plholder"></span></div><li>Recruiting blog post<span class="type editorial">Editorial</span></li>
+                        <br>
+                        <div class="round"><span class="plholder"></span></div><li>Mobile app launch<span class="type q1">Q1 Goals</span></li>
+                        <br>
+                        <div class="round r"><span class="plholder" id="r"></span></div><li class="cross">Interview John H.<span class="type recruiting">Recruiting</span></li>
+                        <br>
+                        <div class="round"><span class="plholder"></span></div><li>Summit update to mobile storefronts<span class="type mobile">Mobile</span></li>
                     </ul>
                 </div>
                 <!-- Sezione 3 -->
                 <div class="section">
                     <h3>Upcoming</h3>
                     <ul>
-                        <li class="cross">Schedule meeting with Alex</li>
-                        <li>Homepage refresh<span class="type website">Website</span></li>
-                        <li>Onboard new Sales team members<span class="type sales">Sales</span></li>
-                        <li>Review editorial calendar<span class="type editorial">Editorial</span></li>
+                        <div class="round r"><span class="plholder" id="r2"></span></div><li class="cross">Schedule meeting with Alex</li>
+                        <br>
+                        <div class="round"><span class="plholder"></span></div><li>Homepage refresh<span class="type website">Website</span></li>
+                        <br>
+                        <div class="round"><span class="plholder"></span></div><li>Onboard new Sales team members<span class="type sales">Sales</span></li>
+                        <br>
+                        <div class="round"><span class="plholder"></span></div><li>Review editorial calendar<span class="type editorial">Editorial</span></li>
                     </ul>
                 </div>
             </div>
