--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <br>
                         <div class="round"><span class="plholder"></span></div><li>Mobile app launch<span class="type q1">Q1 Goals</span></li>
                         <br>
-                        <div class="round r"><span class="plholder" id="r"></span></div><li class="cross">Interview John H.<span class="type recruiting">Recruiting</span></li>
+                        <div class="round r"><span id="r1"></span></div><li>Interview John H.<span class="type recruiting">Recruiting</span></li>
                         <br>
                         <div class="round"><span class="plholder"></span></div><li>Summit update to mobile storefronts<span class="type mobile">Mobile</span></li>
                     </ul>
@@ -48,7 +48,7 @@
                 <div class="section">
                     <h3>Upcoming</h3>
                     <ul>
-                        <div class="round r"><span class="plholder" id="r2"></span></div><li class="cross">Schedule meeting with Alex</li>
+                        <div class="round r"><span id="r2"></span></div><li>Schedule meeting with Alex</li>
                         <br>
                         <div class="round"><span class="plholder"></span></div><li>Homepage refresh<span class="type website">Website</span></li>
                         <br>
