--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Toboolist</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="icon" href="img/logo.png" type="image/x-icon">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Toboolist</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/logo.png" type="image/x-icon">
+</head>
     <body>
-
         <!-- Intestazione pagina -->
         <header>
             <img class="logo" src="img/Logo.png" alt="Logo Toboolist">
             <h1>Toboolist</h1>
         </header>
-        <!-- Task Bar -->   
+        <!-- Task Bar -->
         <div class="nav-task">
             <button class="button" id="add-task">Add Task</button>
             <button class="button" id="add-section">Add a Section</button>
@@ -28,33 +27,42 @@
                 <div class="section">
                     <h3>New Task</h3>
                     <ul>
-                        <div class="round"><span class="plholder"></span></div><li>Quarterly Newsletter<span class="type editorial">Editorial</span></li>
+                        <div class="round">&#10003;</div>
+                        <li>Quarterly Newsletter<span class="type editorial">Editorial</span></li>
                     </ul>
                 </div>
                 <!-- Sezione 2 -->
                 <div class="section">
                     <h3>Today</h3>
                     <ul>
-                        <div class="round"><span class="plholder"></span></div><li>Recruiting blog post<span class="type editorial">Editorial</span></li>
+                        <div class="round">&#10003;</div>
+                        <li>Recruiting blog post<span class="type editorial">Editorial</span></li>
                         <br>
-                        <div class="round"><span class="plholder"></span></div><li>Mobile app launch<span class="type q1">Q1 Goals</span></li>
+                        <div class="round">&#10003;</div>
+                        <li>Mobile app launch<span class="type q1">Q1 Goals</span></li>
                         <br>
-                        <div class="round r"><span id="r1"></span></div><li>Interview John H.<span class="type recruiting">Recruiting</span></li>
+                        <div class="round r">&#10007;</div>
+                        <li>Interview John H.<span class="type recruiting">Recruiting</span></li>
                         <br>
-                        <div class="round"><span class="plholder"></span></div><li>Summit update to mobile storefronts<span class="type mobile">Mobile</span></li>
+                        <div class="round">&#10003;<span class="plholder"></span></div>
+                        <li>Summit update to mobile storefronts<span class="type mobile">Mobile</span></li>
                     </ul>
                 </div>
                 <!-- Sezione 3 -->
                 <div class="section">
                     <h3>Upcoming</h3>
                     <ul>
-                        <div class="round r"><span id="r2"></span></div><li>Schedule meeting with Alex</li>
+                        <div class="round r">&#10007;</div>
+                        <li>Schedule meeting with Alex</li>
                         <br>
-                        <div class="round"><span class="plholder"></span></div><li>Homepage refresh<span class="type website">Website</span></li>
+                        <div class="round">&#10003;</div>
+                        <li>Homepage refresh<span class="type website">Website</span></li>
                         <br>
-                        <div class="round"><span class="plholder"></span></div><li>Onboard new Sales team members<span class="type sales">Sales</span></li>
+                        <div class="round">&#10003;</div>
+                        <li>Onboard new Sales team members<span class="type sales">Sales</span></li>
                         <br>
-                        <div class="round"><span class="plholder"></span></div><li>Review editorial calendar<span class="type editorial">Editorial</span></li>
+                        <div class="round">&#10003;</div>
+                        <li>Review editorial calendar<span class="type editorial">Editorial</span></li>
                     </ul>
                 </div>
             </div>
